<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor"
        android:clickable="true"
        android:orientation="vertical">

       <include
        android:id="@+id/layout_edit_profile"
        layout="@layout/layout_edit_profile"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/frame_horizontal_margin"
            android:layout_marginTop="@dimen/components_top_margin"
            android:background="@drawable/button_action"
            app:backgroundTint="@color/colorSecondary"
            android:text="@string/save"
            android:textColor="@color/secondaryTextColor"></Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/frame_horizontal_margin"
            android:layout_marginTop="@dimen/components_top_margin"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switchNotification1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/components_bottom_margin"
                android:text="@string/notifications"
                android:textSize="@dimen/switch_text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/frame_horizontal_margin"
            android:layout_marginTop="@dimen/components_bottom_margin"
            android:text="@string/privacy"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/switch_text_size"
            android:textStyle="italic|bold"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_shuttle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/components_top_margin"
            android:layout_marginHorizontal="@dimen/frame_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/components_left_margin"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold|italic"
                android:textSize="12sp"
                android:text="Powered by Şatıl ">
            </TextView>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/shuttle"></ImageView>

        </LinearLayout>
    </LinearLayout>
