<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/components_top_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingHorizontal="@dimen/frame_horizontal_margin"
        android:src="@drawable/logo_genel"></ImageView>

    <RelativeLayout
        android:id="@+id/lytName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bordered_text_height"
        android:layout_marginHorizontal="@dimen/frame_horizontal_margin"
        android:layout_marginBottom="@dimen/components_bottom_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="-4dp"
            android:layout_marginRight="@dimen/components_bottom_margin"
            android:background="@color/bgColor"
            android:elevation="0dp"
            android:paddingHorizontal="2dp"
            android:text="@string/name"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_border"
            android:elevation="-1dp"
            android:gravity="center"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:textColor="@color/textColor"
            android:textSize="@dimen/bordered_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lyt_height"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bordered_text_height"
        android:layout_marginHorizontal="@dimen/frame_horizontal_margin"
        android:layout_marginBottom="@dimen/components_bottom_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="-4dp"
            android:layout_marginRight="@dimen/components_bottom_margin"
            android:background="@color/bgColor"
            android:elevation="0dp"
            android:paddingHorizontal="2dp"
            android:text="@string/height"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/txt_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_border"
            android:elevation="-1dp"
            android:gravity="center"
            android:inputType="numberSigned"
            android:maxLines="1"
            android:text="0"
            android:textColor="@color/textColor"
            android:textSize="@dimen/bordered_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lyt_weight"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bordered_text_height"
        android:layout_marginHorizontal="@dimen/frame_horizontal_margin"
        android:layout_marginBottom="@dimen/components_bottom_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="-4dp"
            android:layout_marginRight="@dimen/components_bottom_margin"
            android:background="@color/bgColor"
            android:elevation="0dp"
            android:paddingHorizontal="2dp"
            android:text="@string/weight"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/txt_weight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_border"
            android:elevation="-1dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="0"
            android:inputType="numberSigned"
            android:textColor="@color/textColor"
            android:textSize="@dimen/bordered_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/frame_horizontal_margin"
        android:layout_marginVertical="@dimen/components_top_margin"
        android:background="@drawable/edit_text_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="-4dp"
            android:layout_marginRight="@dimen/components_bottom_margin"
            android:background="@color/bgColor"
            android:elevation="0dp"
            android:paddingHorizontal="2dp"
            android:text="@string/side"
            android:textColor="@color/colorPrimary" />

        <Spinner
            android:id="@+id/spinner_side"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:spinnerMode="dropdown"></Spinner>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/frame_horizontal_margin"
        android:layout_marginTop="@dimen/components_top_margin"
        android:background="@drawable/button_action"
        android:text="@string/save"
        android:textColor="@color/secondaryTextColor"></Button>
</LinearLayout>