<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/listViewBackColor"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/components_left_margin"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_only_attendees"></TextView>

            <Switch
                android:id="@+id/switch_only_attendees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Switch>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:card_view="http://schemas.android.com/tools"
                android:id="@+id/layout_team"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                card_view:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lineupBackColor"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/components_top_margin"
                        android:background="@color/colorSecondary"
                        android:paddingVertical="5dp"
                        android:text="@string/team"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"></TextView>

                    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/listView_team"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:drawSelectorOnTop="true" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:card_view="http://schemas.android.com/tools"
                android:id="@+id/layout_lineup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                card_view:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lineupBackColor"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/components_top_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_weight_left"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/colorSecondary"
                            android:gravity="center"
                            android:text="0"
                            android:textColor="@color/white"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSecondary"
                            android:paddingVertical="5dp"
                            android:text="@string/lineup"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/white"></TextView>

                        <TextView
                            android:id="@+id/txt_weight_right"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/colorSecondary"
                            android:gravity="center"
                            android:text="0"
                            android:textColor="@color/white"></TextView>
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/listView_lineup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:drawSelectorOnTop="true" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGray">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkGray"
            android:text="@string/reset"
            android:textColor="@color/colorSecondary"></Button>

        <Button
            android:id="@+id/btn_draft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkGray"
            android:text="@string/draft"
            android:textColor="@color/colorPrimary"></Button>

        <Button
            android:id="@+id/btn_publish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkGray"
            android:text="@string/publish"
            android:textColor="@color/chat_sender_color10"></Button>

    </LinearLayout>
</LinearLayout>
